Bring cvs up to date channel.c includes no leading colon in ban setting allowed ircsprintf now handles %c internally (might help haven't checked yet) mtrie_conf.c was coring on no mtrie_list s_conf.c now rejects F/B/E lines send.c also now handles %c internally s_serv.c updated with latest anti flood code, tested by a friendly kiddie, it works, though it is rude to users. "you abuse it,  you lose it" config.h/config.h.dist removed LIST_WAIT etc. added MOTD_WAIT MOTD_MAX etc. s_serv.c m_info() updated to reflect those changes.

--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.1 1998/09/17 14:25:03 db Exp $
+ * $Id: config.h.dist,v 1.2 1998/09/19 21:12:34 db Exp $
  */
 
 #ifndef	__config_include__
@@ -673,24 +673,11 @@
  * When this is defined, channel modes are preserved when this
  * server is split from net until rejoin. i.e. if the channel
  * was +i before this server split, it remains +i during the split
+ *
+ * DO NOT USE JUST YET on EFNET (It desyncs channels)
  */
 #define PRESERVE_CHANNEL_ON_SPLIT
 
-/*
- * comstud and I have both noted that solaris 2.5 at least, takes a hissy
- * fit if you don't read a fd that becomes ready right away. Unfortunately
- * the dog3 priority code relies upon not having to read a ready fd right away.
- * If you have HTM mode set low as it is normally, the server will
- * eventually grind to a halt. Personally, I think the server is 
- * faster without some of the CPU expensive manipulation some of the
- * priority code does. Your choice. but it has to be defined for SOLARIS
- * Try it and see. compare.
- * Don't complain if Solaris lags if you don't define this. I warned you.
- *
- * -Dianora
- */
-
-#undef LIMIT_UH
 
 /* IDLE_CHECK
  * If this is defined, each client is checked for excessive idleness
@@ -979,6 +966,11 @@
 */
 #undef  DEBUGMODE               /* define DEBUGMODE to enable debugging mode.*/
 
+/* DEBUG_NO_FORK is used to stop the daemon from doing a fork(), makes it
+ * easier for gdb. You won't need this unless you are planning on
+ * debugging ircd. -Dianora
+ */
+#undef DEBUG_NO_FORK
 
 /* ----------------- not approved on EFnet section -------------------- */
 /* GLINES - global Kline-like bans
