Enhanced files: src/channel.c; include/msg.h
Adds a new command to ircd called KNOCK <channel> which allows users
from outside the channel which do not match any bans to have the server
NOTICE the channel operators in the channel so they know the user wants
to JOIN the channel.

This patch also has an additional feature of sending a NOTICE to the
channel operators when a user is INVITEd to the channel when it is
invite-only (+i).

 Syntax:
  :<sender> KNOCK <channel>

 Possible numerics to return:
  ERR_NEEDMOREPARAMS    ERR_CANNOTSENDTOCHAN
  ERR_NOSUCHCHANNEL

-- David-R <rientjes@mail.whidbey.net>

committed by db@db.net

--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.2 1998/09/19 21:12:34 db Exp $
+ * $Id: config.h.dist,v 1.3 1998/09/22 01:52:22 db Exp $
  */
 
 #ifndef	__config_include__
@@ -398,6 +398,10 @@
  * -Dianora
  */
 #define MOTD_WAIT 10
+
+/* KNOCK_DELAY 5 minutes per each KNOCK should be enough
+ */
+#define KNOCK_DELAY 300
 
 /* EXTRA_BOT_NOTICES - Have the server send extra bot notices?
  */
