--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.3 1998/09/22 01:52:22 db Exp $
+ * $Id: config.h.dist,v 1.4 1998/10/06 04:42:18 db Exp $
  */
 
 #ifndef	__config_include__
@@ -449,6 +449,15 @@
  * small net it might be an advantage to undefine it.
  */
 #define	SHOW_INVISIBLE_LUSERS
+
+#define	ZIP_LINKS		/* compress server-to-server links */
+
+/* NO_DEFAULT_INVISIBLE - clients not +i by default
+ * When defined, your users will not automatically be attributed with user
+ * mode "i" (i == invisible). Invisibility means people dont showup in
+ * WHO or NAMES unless they are on the same channel as you.
+ */
+#define	NO_DEFAULT_INVISIBLE
 
 /* NO_DEFAULT_INVISIBLE - clients not +i by default
  * When defined, your users will not automatically be attributed with user
