redid split detection.

--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.6 1998/10/12 06:18:13 db Exp $
+ * $Id: config.h.dist,v 1.7 1998/10/15 04:17:51 db Exp $
  */
 
 #ifndef	__config_include__
@@ -691,6 +691,24 @@
  */
 #define PRESERVE_CHANNEL_ON_SPLIT
 
+/*
+ * SPLIT_SMALLNET_SIZE defines what constitutes a split from 
+ * the net. for a leaf, 2 is fine. If the number of servers seen
+ * on the net gets less than 2, a split is deemed to have happened.
+ */
+#define SPLIT_SMALLNET_SIZE 2
+
+/* LIMIT_UH
+ * If this is defined, Y line limit is made against the actual
+ * username not the ip. i.e. if you limit the connect frequency line
+ * to 1, that allows only 1 username to connect instead of 1 client per ip
+ * i.e. you can have 10 clients all with different usernames, but each user
+ * can only connect once. This is only useful if you only allow identd
+ * from that host. (The code strips non identd '~' as it stands)
+ * Its a tad slower then the ip limited code.
+ *
+ */
+#undef LIMIT_UH
 
 /* IDLE_CHECK
  * If this is defined, each client is checked for excessive idleness
