Fixed a few missing extern's added OPER_MOTD code, opers get an unique motd upon opering

--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.8 1998/10/16 04:22:26 lusky Exp $
+ * $Id: config.h.dist,v 1.9 1998/10/19 07:05:24 db Exp $
  */
 
 #ifndef	__config_include__
@@ -96,6 +96,10 @@
  * i.e. /motd A for second motd
  * KPATH = kline conf file 
  * 
+ * OPER_MOTD = if defined display an oper motd to opers 
+ * when they oper up.
+ * OMOTD = path to MOTD for opers
+ *
  * For /restart to work, SPATH needs to be a full pathname
  * (unless "." is in your exec path). -Rodder
  * Leave KPATH undefined if you want klines in main conf file.
@@ -113,6 +117,9 @@
 #define	LPATH	"ircd.log"
 #define	PPATH	"ircd.pid"
 #define HPATH	"opers.txt"
+
+#define OPER_MOTD
+#define OMOTD   "opers.motd"
 
 /* TS_MAX_DELTA and TS_WARN_DELTA -  allowed delta for TS when another
  * server connects.
