--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.12 1998/11/15 07:10:07 db Exp $
+ * $Id: config.h.dist,v 1.13 1998/11/18 02:19:14 db Exp $
  */
 
 #ifndef	__config_include__
@@ -136,6 +136,14 @@
  */
 #define TS_MAX_DELTA 1800	/* seconds */
 #define TS_WARN_DELTA 15 	/* seconds */
+
+/* SLAVE_SERVERS - Use this to send LOCOPS and KLINES to servers you define
+ * uses U: lines in ircd.conf, each server defined in an U: line
+ * is sent a copy of the locally placed K-line, and will also
+ * accept K-lines from those servers.
+ * This is useful for sites with more than one client server.
+ */
+#undef SLAVE_SERVERS
 
 /* LOCKFILE - Exclusive use of ircd.conf and kline.conf during writes
  *
