more sanity testing in mtrie_conf.c
added option to do IP I line matching preferentially

--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.14 1998/11/28 03:28:43 db Exp $
+ * $Id: config.h.dist,v 1.15 1998/12/24 03:50:20 db Exp $
  */
 
 #ifndef	__config_include__
@@ -737,6 +737,12 @@
  */
 #undef IDLE_CHECK
 #define IDLE_TIME 30
+
+/* If defined USE_IP_I_LINE_FIRST will search IP I lines first
+ * and use that in preference over the mtrie. (hi jimmie)
+ * -Dianora
+ */
+#undef USE_IP_I_LINE_FIRST
 
 /*   STOP STOP STOP STOP STOP STOP STOP STOP STOP STOP STOP STOP STOP STOP  */
 
