Corrected config.h and config.h.dist to match

--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.18 1999/01/20 05:56:04 db Exp $
+ * $Id: config.h.dist,v 1.19 1999/01/22 19:49:20 db Exp $
  */
 
 #ifndef	__config_include__
@@ -516,6 +516,12 @@
 #undef	LOCOP_RESTART
 #undef	LOCOP_DIE
 
+/*
+ * OPER_UMODES LOCAOP_UMODES - set these to be the initial umodes when OPER'ing
+ */
+#define OPER_UMODES   (FLAGS_OPER|FLAGS_WALLOP|FLAGS_SERVNOTICE|FLAGS_OPERWALL)
+#define LOCOP_UMODES   (FLAGS_LOCOP|FLAGS_WALLOP|FLAGS_SERVNOTICE)
+
 /* MAXIMUM LINKS - max links for class 0 if no Y: line configured
  *
  * This define is useful for leaf nodes and gateways. It keeps you from
@@ -1009,7 +1015,7 @@
  * -Dianora
  */
 #define ANTI_SPAMBOT_EXTRA
-#define PRIVMSG_POSSIBLE_SPAMBOT_COUNT	3
+#define PRIVMSG_POSSIBLE_SPAMBOT_COUNT	50
 
 #ifdef HUB
 #undef FLUD
