Added NO_PRIORITY back to config.h

--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.22 1999/02/15 03:05:14 db Exp $
+ * $Id: config.h.dist,v 1.23 1999/02/16 15:49:53 db Exp $
  */
 
 #ifndef	__config_include__
@@ -816,6 +816,19 @@
  * Define this to enable WintrHawk "styling"
  */
 #define WINTRHAWK
+
+/*
+ * comstud and I have both noted that solaris 2.5 at least, takes a hissy
+ * fit if you don't read a fd that becomes ready right away. Unfortunately
+ * the dog3 priority code relies upon not having to read a ready fd right away.
+ * If you have HTM mode set low as it is normally, the server will
+ * eventually grind to a halt.
+ * Don't complain if Solaris lags if you don't define this. I warned you.
+ *
+ * -Dianora
+ */
+
+#define NO_PRIORITY
 
 /*   STOP STOP STOP STOP STOP STOP STOP STOP STOP STOP STOP STOP STOP STOP  */
 
